--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,7 +106,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     line-height: 1.75em;
-    color: #777;
+    color: #efefef;
     overflow-x: hidden !important;
 }
 p {
@@ -114,7 +114,7 @@ p {
     font-size: 15px;
     font-weight: 400;
     line-height: 1.75em;
-    color: #777;
+    color: #efefef;
     margin-bottom: 20px;
 }
 h1,
@@ -2587,7 +2587,7 @@ hr.border-2 {
     left: 0;
     height: 60%;
     width: 100%;
-    background: #1b1b1b;
+    background: #462619;
     z-index: -1;
 }
 .first-class-services .square-flip {
@@ -3178,7 +3178,7 @@ button.mfp-arrow {
 /* ======= Opening Hours style ======= */
 .opening-hours-box {
     position: relative;
-    background: #1b1b1b;
+    background: #462619;
     padding: 50px 25px;
     margin-bottom: -75px;
     text-align: center;
@@ -3193,12 +3193,12 @@ button.mfp-arrow {
     margin-bottom: 10px;
 }
 .opening-hours-box p {
-    color: #777;
+    color: #f1f1f1;
     margin-bottom: 0;
     margin-top: 30px;
 }
 .opening-hours-box p small{
-    color: #777;
+    color: #efefefef;
 }
 .opening-hours-box p small a {
     color: #C19D60;
