--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2112,7 +2112,7 @@ font-size: 15px;
     left: 0;
     height: 60%;
     width: 100%;
-    background: #1b1b1b;
+    background: #E3E0DB;
     z-index: -1;
 }
 .team-card {
